--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,11 @@ dependencies {
     def hilt_navigation_compose = "1.0.0-alpha03"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose"
 
+    def mikepenz_iconics = "5.2.8"
+    implementation "com.mikepenz:iconics-core:$mikepenz_iconics"
+    implementation 'com.mikepenz:google-material-typeface:4.0.0.1-kotlin@aar'
+    implementation "com.mikepenz:iconics-compose:${mikepenz_iconics}"
+
     def room = "2.3.0"
     implementation "androidx.room:room-runtime:$room"
     implementation "androidx.room:room-ktx:$room"
