--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
@@ -82,8 +81,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room"
     kapt "androidx.room:room-compiler:$room"
 
-    def gson = "2.8.5"
-    implementation "com.google.code.gson:gson:$gson"
+    def coil = "1.2.2"
+    implementation("io.coil-kt:coil:$coil")
+    implementation "com.google.accompanist:accompanist-coil:0.12.0"
 
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
