--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
@@ -84,6 +85,8 @@ dependencies {
     def coil = "1.2.2"
     implementation("io.coil-kt:coil:$coil")
     implementation "com.google.accompanist:accompanist-coil:0.12.0"
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
