--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,10 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.0-alpha02'
+        classpath 'com.android.tools.build:gradle:7.1.0-alpha05'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
         classpath 'com.google.gms:google-services:4.3.8'
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.37"
