--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation 'androidx.activity:activity-compose:1.3.0-rc01'
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
+    implementation 'androidx.compose.ui:ui-viewbinding:1.0.0'
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
