put chart in AnalyticScreen.kt and try testing repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
@@ -51,9 +55,24 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.8.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Core library
+    androidTestImplementation 'androidx.test:core:1.4.0'
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+
+    // Assertions
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:truth:1.4.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.3'
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -72,11 +91,6 @@ dependencies {
 
     def hilt_navigation_compose = "1.0.0-alpha03"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose"
-
-    def mikepenz_iconics = "5.2.8"
-    implementation "com.mikepenz:iconics-core:$mikepenz_iconics"
-    implementation 'com.mikepenz:google-material-typeface:4.0.0.1-kotlin@aar'
-    implementation "com.mikepenz:iconics-compose:${mikepenz_iconics}"
 
     def room = "2.3.0"
     implementation "androidx.room:room-runtime:$room"
