--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,8 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
     def accompanist_pager = "0.16.0"
