--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lexwilliam.moneymanager">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MoneyManagerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_monelytics_app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_monelytics_app_icon_round"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.MoneyManager">
         <activity
